Update unused variable
