# swagger.yaml
@@ -19,27 +19,9 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PrescriptionSavedto"
-        "400": &a1
-          description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/BadRequestSchema"
-        "403": &a2
-          description: Forbidden
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/ForbiddenSchema"
-        "500": &a3
-          description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/InternalServerErrorSchema"
-      tags: &a4
+      tags: &a1
         - Neblar Prescriptions API
-      security: &a5
+      security: &a2
         - bearer: []
   /v1/prescriptions/{nhi}:
     get:
@@ -61,11 +43,8 @@ paths:
                 type: array
                 items:
                   $ref: "#/components/schemas/CreateprescriptionsDto"
-        "400": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
-      security: *a5
+      tags: *a1
+      security: *a2
   /v1/prescriptions/{nhi}/{id}:
     put:
       operationId: update-prescription
@@ -95,11 +74,8 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/PrescriptionUpdateDto"
-        "400": *a1
-        "403": *a2
-        "500": *a3
-      tags: *a4
-      security: *a5
+      tags: *a1
+      security: *a2
 info:
   title: Neblar API Documentation
   description: >2-
@@ -121,63 +97,6 @@ servers:
     variables: {}
 components:
   schemas:
-    BadRequestSchema:
-      type: object
-      properties:
-        status:
-          type: string
-          description: Failure Status
-          example: Failure
-        statusCode:
-          type: string
-          description: Http Status Code
-          example: 400
-        data:
-          type: object
-          description: Blank Object
-          example: {}
-        errorDescription:
-          type: string
-          description: Error Description
-          example: This is bad request
-    ForbiddenSchema:
-      type: object
-      properties:
-        status:
-          type: string
-          description: Failure Status
-          example: Failure
-        statusCode:
-          type: string
-          description: Http Status Code
-          example: 403
-        data:
-          type: object
-          description: Blank Object
-          example: {}
-        errorDescription:
-          type: string
-          description: Error Description
-          example: Forbidden
-    InternalServerErrorSchema:
-      type: object
-      properties:
-        status:
-          type: string
-          description: Failure Status
-          example: Failure
-        statusCode:
-          type: string
-          description: Http Status Code
-          example: 500
-        data:
-          type: object
-          description: Blank Object
-          example: {}
-        errorDescription:
-          type: string
-          description: Error Description
-          example: Internal server error
     PatientParam:
       type: object
       properties: {}
@@ -185,7 +104,7 @@ components:
       type: object
       properties:
         patient:
-          example: &a6
+          example: &a3
             nhi: nhi-1234
             name: Smith
           allOf:
@@ -193,9 +112,9 @@ components:
         date:
           format: date-time
           type: string
-          example: &a7 2024-01-08T16:41:00.923Z
+          example: &a4 2024-01-08T17:06:41.870Z
         medications:
-          example: &a8
+          example: &a5
             - id: 63afe809158d860c20c94aae
               dosage: 5ml
           type: array
@@ -220,59 +139,27 @@ components:
     PrescriptionSavedto:
       type: object
       properties:
-        status:
-          type: string
-          description: Success Status
-          example: Success
-        statusCode:
-          type: string
-          description: Http Status Code
-          example: 200
-        errorDescription:
-          type: string
-          description: Error Description
-          example: ""
-        error:
-          type: object
-          description: Blank Error Object
-          example: &a9 {}
         data:
           $ref: "#/components/schemas/PrescriptionSave"
     UpdatePrescriptionDto:
       type: object
       properties:
         patient:
-          example: *a6
+          example: *a3
           allOf:
             - $ref: "#/components/schemas/PatientParam"
         date:
           format: date-time
           type: string
-          example: *a7
+          example: *a4
         medications:
-          example: *a8
+          example: *a5
           type: array
           items:
             type: object
     PrescriptionUpdateDto:
       type: object
       properties:
-        status:
-          type: string
-          description: Success Status
-          example: Success
-        statusCode:
-          type: string
-          description: Http Status Code
-          example: 200
-        errorDescription:
-          type: string
-          description: Error Description
-          example: ""
-        error:
-          type: object
-          description: Blank Error Object
-          example: *a9
         data:
           type: array
           items:
